# simple-riscv-cpu

./: .gitignore  Notices.txt  pyproject.toml  setup.cfg  setup.py
simple_riscv_cpu/: cpu.py
simple_riscv_cpu/test/: test_decoder.py
software/: .gitignore  Makefile  main.cpp  ram.ld  startup.S
