# SPDX-License-Identifier: LGPL-2.1-or-later
# See Notices.txt for copyright information
[metadata]
name = simple_riscv_cpu
license = LGPL-2.1-or-later
license_file = LICENSE.md
description = Simple RISC-V RV32I CPU
author = Jacob Lifshay
author_email = programmerjake@gmail.com
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = find:
install_requires =
    nmigen>=0.3-dev